2008-06-24  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=19727

        Return bool from GraphicsContext::getShadow() so the tests aren't duplicated so
        many times in Cairo and Qt ports.

Canonical link: https://commits.webkit.org/27213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34765 268f45cc-cd09-0410-ab3c-d52691b4dbfc