WebCore/platform/graphics/cairo/FontCairo.cpp
@@ -57,10 +57,10 @@ void Font::drawGlyphs(GraphicsContext* context, const SimpleFontData* font, cons
     IntSize shadowSize;
     int shadowBlur;
     Color shadowColor;
-    context->getShadow(shadowSize, shadowBlur, shadowColor);
+    bool hasShadow = context->textDrawingMode() == cTextFill &&
+        context->getShadow(shadowSize, shadowBlur, shadowColor);
 
     // TODO: Blur support
-    bool hasShadow = context->textDrawingMode() == cTextFill && shadowColor.isValid() && (shadowSize.width() || shadowSize.height());
     if (hasShadow) {
         // Disable graphics context shadows (not yet implemented) and paint them manually
         context->clearShadow();
